Added gifs^Made an image cache stuff for the gifs in loops cause of the jvm was having out of memory errors^Shii I added a lot of UI stuff, this stuff is beautuful, thank God , I sleep